HEAD
	+ Fix input badly hidden in the logs screen
	+ reloadTable from DataTable now remove cached fields as well
3.0.10
	+ Fixed unsafe characters error when getting title of progress
	  indicator in progress dialog
	+ Added use utf8 to dashboard template to fix look of closable messages
3.0.9
	+ Adapted file downloads to the new utf8 fixes
	+ Write backup files in raw mode to avoid utf8 problems
	+ Print always utf8 in STDOUT on all CGIs
	+ Decode CGI params of values entered at the interface as utf8
	+ Proper encode/decode of utf8 with also pretty JSON
	+ Fixed utf8 decoding in date shown at dashboard
	+ Removed old workarounds for utf8 problems
	+ Added new recoveryEnabled() helper method to Module::Base
	+ Added recoveryDomainName() method to SyncProvider interface
	+ Restore backup can now install missing modules in Disaster Recovery
	+ Show specific slides when installing a commercial edition
	+ Redirect to proper CGI after login in disaster recovery mode
	+ Removed old debconf workaround for first stage installation
	+ Log redis start message as debug instead of info to avoid flood
	+ Use unsafeParam in EBox::CGI::Base::paramsAsHash
	+ EBox::Module::Service does not raise exception and logs
	  nothing when using init.d status
	+ Fixed glitch in backup CGI which sometimes showed
	  the modal dialog with a incorrect template
3.0.8
	+ Use path for default name in SyncFolders::Folder
	+ Do not restrict characters in data table searchs
	+ Fixed automatic bug report regression
	+ Fixed refresh of the table and temporal control states
	  in customActionClicked callback
	+ Modified modalbox-zentyal.js to accept wideDialog parameter
	+ Fixed template method in MultiStateAction to return the default
	  template when it is not any supplied to the object
	+ Fixed sendInPlaceBooleanValue method from table-helper.js; it
	  aborted because bad parameters of Ajax.Updater
	+ Fixed bug that made that the lock was shared between owners